--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,51 @@
-# This will be the first part of the title tag for your site <title> site.name + page.title </title>
+# This will be the first part of the title tag for your site <title> site.name </title>
+# ===============
 name: ""
+
 # Populates the meta description for the site. Should be under 150 characters for best SEO purposes.
+# ===============
 descripiton: ""
+
 # Owner (organization or individual) of site content
+# ===============
 author: ""
 
 #url: "[http:// ]"
+# Chance this when you generate your site for production to your production URL i.e http://mrsjxn.com
+# ===============
 url: "http://localhost:4000"
 
+
+# Publish future posts or not option. 
+# ===============
+# future: true
+
+# List files and directories to include. Dot files are excluded by default - so those are good to include here. Most things are added by
+# default. I generally add my .htaccess file and nothing else.
+# ===============
+# include:
+
+# "A list of directories (including trailing slash) and files to exclude from the conversion"
+# I normally exclude _sass, README*, and .gitignore
+# Directories that start with an underscore _ are not copied over by default. Still like to include _sass anyways.
+# ===============
+#exclude:_sass,.gitignore, README.md
+
 # Pagination variable for how many posts to show in a list
+# ===============
 #paginate: 5
 
 # Style of permalinks
+# ===============
 #permalink: pretty
 
 # Variable format options for URL styles below
+# ===============
 # pretty                                          => /2009/04/29/slap-chop/index.html
 # /:month-month:day-:year/:title.html/            => 04-29-2009/slap-chop.html
 # /blog/:yearr/:month/:day/:title                 => /blog/2009/04/29/slap-chop/index.html
 
 # UnComment once you have pygments installed. Used for code syntax highlighting.
 #pygments: true
+#
+#
