--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,41 @@
 # This will be the first part of the title tag for your site 
-# <title> {{site.name}}</title>
-# ===============
-name: "NKD"
+# <title> {{site.name}} </title>
+# ============================================================
+name: "NKD - B"
 
-# Populates the meta description for the site. Should be under 150 characters for best SEO purposes.
-# ===============
-description: "NKD - Boilerplate for a responsive html5"
+# Populates the meta description for the site. Should be under 150 characters for best SEO results.
+# ============================================================
+description: "NKD - Boilerplate for a responsive HTML5/SASS jekyll project."
 
-# Owner (organization or individual) of site content
-# ===============
+# Owner (organization or individual) of site content - You'll want to change this from mrmrs :)
+# ============================================================
 author: "mrmrs"
 
-#url: "[http:// ]"
 # Chance this when you generate your site for production to your production URL i.e http://mrsjxn.com
-# ===============
+# ============================================================
 #url: "http://productionurl.com
 url: "http://localhost:4000"
 
 # Publish future posts or not option. 
-# ===============
+# ============================================================
 future: true
 
 # "A list of directories (including trailing slash) and files to exclude from the conversion"
 # I normally exclude _sass, README*, and .gitignore
 # Directories that start with an underscore _ are not copied over by default. Still like to include _sass anyways.
-# ===============
+# ============================================================
 exclude: [README.md, Rakefile]
 
 # Pagination variable for how many posts to show in a list
-# ===============
+# ============================================================
 #paginate: 5
 
 # Style of permalinks
-# ===============
+# ============================================================
 permalink: pretty
 
 # Variable format options for URL styles below
-# ===============
+# ============================================================
 # pretty                                          => /2009/04/29/slap-chop/index.html
 # /:month-month:day-:year/:title.html/            => 04-29-2009/slap-chop.html
 # /blog/:yearr/:month/:day/:title                 => /blog/2009/04/29/slap-chop/index.html
