--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # This will be the first part of the title tag for your site 
 # <title> {{site.name}} </title>
 # ============================================================
-name: "HTML patterns"
+name: "HTML5 Patterns"
 
 # Populates the meta description for the site. Should be under 150 characters for best SEO results.
 # ============================================================
-description: "Common HTML patterns I use. Maybe useful for others."
+description: "Common HTML5 patterns I use."
 
 # Owner (organization or individual) of site content - You'll want to change this from mrmrs :)
 # ============================================================
@@ -25,21 +25,3 @@ future: true
 # Directories that start with an underscore _ are not copied over by default. Still like to include _sass anyways.
 # ============================================================
 exclude: [README.md, Rakefile]
-
-# Pagination variable for how many posts to show in a list
-# ============================================================
-#paginate: 5
-
-# Style of permalinks
-# ============================================================
-permalink: pretty
-
-# Variable format options for URL styles below
-# ============================================================
-# pretty                                          => /2009/04/29/slap-chop/index.html
-# /:month-month:day-:year/:title.html/            => 04-29-2009/slap-chop.html
-# /blog/:yearr/:month/:day/:title                 => /blog/2009/04/29/slap-chop/index.html
-
-# Uncomment if you have pygments installed. Used for code syntax highlighting. 
-# If you're not doing syntax highlighting you can delete this.
-#pygments: true
