--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@
 AddOutputFilterByType DEFLATE text/text text/html text/plain text/xml text/css application/x-javascript application/javascript text/javascript
 </ifmodule>
 #End Gzip
+<<<<<<<-- moorthy --->>>>>>>
